# msdfgl

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  meson.build  meson_options.txt  shell.nix
example/: CMakeLists.txt  demo.c  meson.build
example/glad/include/glad/: glad.h
example/glad/src/: glad.c
include/: meson.build  msdfgl.h  msdfgl.h.in
src/: CMakeLists.txt  font_fragment.glsl  font_geometry.glsl  font_vertex.glsl  generate.cmake  meson.build  msdf_fragment.glsl  msdf_vertex.glsl  msdfgl.c  msdfgl.h  msdfgl_map.c  msdfgl_map.h  msdfgl_serializer.c  msdfgl_serializer.h  msdfgl_shaders.cmake
